--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "fetch-solutions": "ts-node-esm scripts/fetch-solutions.ts"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.1.0",
@@ -18,6 +19,7 @@
     "next": "15.3.1",
     "next-mdx-remote": "^5.0.0",
     "node-cache": "^5.1.2",
+    "node-fetch": "^3.3.2",
     "prismjs": "^1.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -30,11 +32,12 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/react": "^19.1.2",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
